# apan5560-assignment2

./: .gitignore  Dockerfile  README.md  pyproject.toml  train_cifar10.py
app/: main.py
app/services/: prediction_service.py
helper_lib/: checkpoints.py  data_loader.py  evaluator.py  model.py  trainer.py
